--- a/src/app/ext/ugyfelter/ugyfelter-bizonylatesirat/ugyfelter-bizonylatesirat.component.html
+++ b/src/app/ext/ugyfelter/ugyfelter-bizonylatesirat/ugyfelter-bizonylatesirat.component.html
@@ -1,5 +1,5 @@
 <div class="alapkeret">
-  <table class="table table-bordered table-sm table-responsive" style="border: none">
+  <table>
     <thead>
     <tr>
       <th></th>
