--- a/src/app/ext/ugyfelter/ugyfelter-projekt-tabla/ugyfelter-projekt-tabla.component.html
+++ b/src/app/ext/ugyfelter/ugyfelter-projekt-tabla/ugyfelter-projekt-tabla.component.html
@@ -1,4 +1,4 @@
-<table class="table table-bordered table-sm table-responsive" style="border: none;" xmlns="http://www.w3.org/1999/html">
+<table>
   <thead>
   <tr>
     <th>Id</th>
