--- a/src/app/05 Segedeszkozok/04 Csoport/csoport-list/csoport-list.component.html
+++ b/src/app/05 Segedeszkozok/04 Csoport/csoport-list/csoport-list.component.html
@@ -13,9 +13,11 @@
                 [egyTemplate]="gridegy">
   </app-tabla-ex>
 
-  <!--<app-csoport-entity *ngFor="let item of Dto; let i = index" [Dto]="item"-->
-                                                              <!--[DtoIndex]="i">-->
-  <!--</app-csoport-entity>-->
+  <!--<div style="border-left: 1px solid; border-top: 1px solid; width: min-content; margin-top: 2em">-->
+    <!--<app-csoport-entity *ngFor="let item of Dto; let i = index" [Dto]="item"-->
+                                                                <!--[DtoIndex]="i">-->
+    <!--</app-csoport-entity>-->
+  <!--</div>-->
 
   <ng-template #gridegy>
     <app-csoport-egy [uj]="uj"
