--- a/src/app/01 Torzsadatok/01 Irattipus/irattipus-szerkesztes/irattipus-szerkesztes.component.html
+++ b/src/app/01 Torzsadatok/01 Irattipus/irattipus-szerkesztes/irattipus-szerkesztes.component.html
@@ -1,6 +1,5 @@
 <div class="alapkeret" [appSpinner]="eppFrissit">
-  <h5 *ngIf="uj">Új {{irattipusservice.cim | lowercase}}</h5>
-  <h5 *ngIf="!uj">{{irattipusservice.cim}} módosítása</h5>
+  <h5>{{cim}}</h5>
 
   <form [formGroup]="form" (ngSubmit)="onSubmit()" autocomplete="off">
 
@@ -13,5 +12,6 @@
       <button class="toolbutton okbutton" type="submit" [disabled]="form.invalid">Ok</button>
       <button class="toolbutton" type="button" (click)="onCancel()">Mégsem</button>
     </div>
+
   </form>
 </div>
