--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -36,6 +36,10 @@ input[type="file"] {
   border: 1px solid $keretszin;
   padding: 0.5em;
 }
+.szerkeszto {
+  width: min-content;
+  margin-bottom: 0.5em;
+}
 
 %input-base {
   outline: 0;
