--- a/src/app/01 Torzsadatok/01 Irattipus/irattipus-szerkesztes/irattipus-szerkesztes.component.html
+++ b/src/app/01 Torzsadatok/01 Irattipus/irattipus-szerkesztes/irattipus-szerkesztes.component.html
@@ -1,4 +1,4 @@
-<div class="alapkeret" [appSpinner]="eppFrissit">
+<div class="alapkeret szerkeszto" [appSpinner]="eppFrissit">
   <h5>{{cim}}</h5>
 
   <form [formGroup]="form" (ngSubmit)="onSubmit()" autocomplete="off">
