--- a/src/app/01 Torzsadatok/06 Cikk/cikk-egy/cikk-egy.component.html
+++ b/src/app/01 Torzsadatok/06 Cikk/cikk-egy/cikk-egy.component.html
@@ -1,6 +1,4 @@
-<div [ngClass]="!uj ? 'alapkeret' : ''" [appSpinner]="eppFrissit">
-  <app-cikk-egy-toolbar *ngIf="!uj"
-                        (eventNav)="doNav($event)">
-  </app-cikk-egy-toolbar>
+<div class="alapkeret" [appSpinner]="eppFrissit">
+  <app-cikk-egy-toolbar (eventNav)="doNav($event)"></app-cikk-egy-toolbar>
   <ng-template #compcont_cikk></ng-template>
 </div>
