--- a/src/app/01 Torzsadatok/06 Cikk/cikk-list/cikk-list.component.html
+++ b/src/app/01 Torzsadatok/06 Cikk/cikk-list/cikk-list.component.html
@@ -8,6 +8,9 @@
                [enUj]="jog" (Uj)="doUjtetel()"
                [visZoom]="zoom" (StopZoom)="onStopzoom()">
   </app-toolbar>
+
+  <ng-template #compcont_cikkuj></ng-template>
+
   <app-tabla-ex #tabla
                 [items]="Dto"
                 [colsets]="cikkservice.GridSettings"
@@ -18,9 +21,7 @@
   </app-tabla-ex>
 
   <ng-template #gridegy>
-    <app-cikk-egy [uj]="uj"
-                  [dto]="Dto[DtoSelectedIndex]"
-                  (eventUj)="onUjtetelkesz($event)"
+    <app-cikk-egy [dto]="Dto[DtoSelectedIndex]"
                   (eventTorles)="onTorles()"
                   (eventModositas)="onModositaskesz($event)">
     </app-cikk-egy>
