--- a/src/app/01 Torzsadatok/09 Ugyfel/ugyfel-egy/ugyfel-egy.component.html
+++ b/src/app/01 Torzsadatok/09 Ugyfel/ugyfel-egy/ugyfel-egy.component.html
@@ -1,6 +1,4 @@
-<div [ngClass]="!uj ? 'alapkeret' : ''" [appSpinner]="eppFrissit">
-  <app-ugyfel-egy-toolbar *ngIf="!uj"
-                        (eventNav)="doNav($event)">
-  </app-ugyfel-egy-toolbar>
+<div class="alapkeret" [appSpinner]="eppFrissit">
+  <app-ugyfel-egy-toolbar (eventNav)="doNav($event)"></app-ugyfel-egy-toolbar>
   <ng-template #compcont_ugyfel></ng-template>
 </div>
