--- a/src/app/01 Torzsadatok/02 Fizetesimod/fizetesimod-list/fizetesimod-list.component.html
+++ b/src/app/01 Torzsadatok/02 Fizetesimod/fizetesimod-list/fizetesimod-list.component.html
@@ -8,6 +8,9 @@
                [enUj]="jog" (Uj)="doUjtetel()"
                [visZoom]="zoom" (StopZoom)="onStopzoom()">
   </app-toolbar>
+
+  <ng-template #compcont_fizetesimoduj></ng-template>
+
   <app-tabla-ex #tabla
                 [items]="Dto"
                 [colsets]="fizetesimodservice.GridSettings"
@@ -18,9 +21,7 @@
   </app-tabla-ex>
 
   <ng-template #gridegy>
-    <app-fizetesimod-egy [uj]="uj"
-                         [dto]="Dto[DtoSelectedIndex]"
-                         (eventUj)="onUjtetelkesz($event)"
+    <app-fizetesimod-egy [dto]="Dto[DtoSelectedIndex]"
                          (eventTorles)="onTorles()"
                          (eventModositas)="onModositaskesz($event)">
     </app-fizetesimod-egy>
