--- a/src/app/01 Torzsadatok/03 Penznem/penznem-list/penznem-list.component.html
+++ b/src/app/01 Torzsadatok/03 Penznem/penznem-list/penznem-list.component.html
@@ -8,6 +8,9 @@
                [enUj]="jog" (Uj)="doUjtetel()"
                [visZoom]="zoom" (StopZoom)="onStopzoom()">
   </app-toolbar>
+
+  <ng-template #compcont_penznemuj></ng-template>
+
   <app-tabla-ex #tabla
                 [items]="Dto"
                 [colsets]="penznemservice.GridSettings"
@@ -18,9 +21,7 @@
   </app-tabla-ex>
 
   <ng-template #gridegy>
-    <app-penznem-egy [uj]="uj"
-                     [dto]="Dto[DtoSelectedIndex]"
-                     (eventUj)="onUjtetelkesz($event)"
+    <app-penznem-egy [dto]="Dto[DtoSelectedIndex]"
                      (eventTorles)="onTorles()"
                      (eventModositas)="onModositaskesz($event)">
     </app-penznem-egy>
