--- a/src/app/01 Torzsadatok/051 Termekdij/termekdij-list/termekdij-list.component.html
+++ b/src/app/01 Torzsadatok/051 Termekdij/termekdij-list/termekdij-list.component.html
@@ -8,6 +8,9 @@
                [enUj]="jog" (Uj)="doUjtetel()"
                [visZoom]="zoom" (StopZoom)="onStopzoom()">
   </app-toolbar>
+
+  <ng-template #compcont_termekdijuj></ng-template>
+
   <app-tabla-ex #tabla
                 [items]="Dto"
                 [colsets]="termekdijservice.GridSettings"
@@ -18,9 +21,7 @@
   </app-tabla-ex>
 
   <ng-template #gridegy>
-    <app-termekdij-egy [uj]="uj"
-                       [dto]="Dto[DtoSelectedIndex]"
-                       (eventUj)="onUjtetelkesz($event)"
+    <app-termekdij-egy [dto]="Dto[DtoSelectedIndex]"
                        (eventTorles)="onTorles()"
                        (eventModositas)="onModositaskesz($event)">
     </app-termekdij-egy>
