--- a/src/app/05 Segedeszkozok/03 Felhasznalo/felhasznalo-egy/felhasznalo-egy.component.html
+++ b/src/app/05 Segedeszkozok/03 Felhasznalo/felhasznalo-egy/felhasznalo-egy.component.html
@@ -1,6 +1,4 @@
-<div [ngClass]="!uj ? 'alapkeret' : ''" [appSpinner]="eppFrissit">
-  <app-felhasznalo-egy-toolbar *ngIf="!uj"
-                               (eventNav)="doNav($event)">
-  </app-felhasznalo-egy-toolbar>
+<div class="alapkeret" [appSpinner]="eppFrissit">
+  <app-felhasznalo-egy-toolbar (eventNav)="doNav($event)"></app-felhasznalo-egy-toolbar>
   <ng-template #compcont_felhasznalo></ng-template>
 </div>
