--- a/src/app/05 Segedeszkozok/03 Felhasznalo/felhasznalo-szerkesztes/felhasznalo-szerkesztes.component.html
+++ b/src/app/05 Segedeszkozok/03 Felhasznalo/felhasznalo-szerkesztes/felhasznalo-szerkesztes.component.html
@@ -1,6 +1,5 @@
-<div class="alapkeret" [appSpinner]="eppFrissit">
-  <h5 *ngIf="uj">Új {{felhasznaloservice.cim | lowercase}}</h5>
-  <h5 *ngIf="!uj">{{felhasznaloservice.cim}} módosítása</h5>
+<div class="alapkeret szerkeszto" [appSpinner]="eppFrissit">
+  <h5>{{cim}}</h5>
 
   <form [formGroup]="form" (ngSubmit)="onSubmit()" autocomplete="off">
 
