--- a/src/app/02 Eszkozok/01 Projekt/projekt/projekt-szerkesztes/projekt-szerkesztes.component.html
+++ b/src/app/02 Eszkozok/01 Projekt/projekt/projekt-szerkesztes/projekt-szerkesztes.component.html
@@ -1,4 +1,4 @@
-<div class="alapkeret" [appSpinner]="eppFrissit">
+<div class="alapkeret szerkeszto" [appSpinner]="eppFrissit">
   <h5 *ngIf="uj">Új {{projektservice.cim | lowercase}}</h5>
   <h5 *ngIf="!uj">{{projektservice.cim}} módosítása</h5>
 
