--- a/src/app/02 Eszkozok/01 Projekt/projekt/projekt-egy/projekt-egy.component.html
+++ b/src/app/02 Eszkozok/01 Projekt/projekt/projekt-egy/projekt-egy.component.html
@@ -1,6 +1,4 @@
-<div [ngClass]="!uj ? 'alapkeret' : ''" [appSpinner]="eppFrissit">
-  <app-projekt-egy-toolbar *ngIf="!uj"
-                           (eventNav)="doNav($event)">
-  </app-projekt-egy-toolbar>
+<div class="alapkeret" [appSpinner]="eppFrissit">
+  <app-projekt-egy-toolbar (eventNav)="doNav($event)"></app-projekt-egy-toolbar>
   <ng-template #compcont_projekt></ng-template>
 </div>
