projektkapcsolat-list csinálja az újakat, kivétel vágólapról

--- a/src/app/02 Eszkozok/01 Projekt/projektkapcsolat/projektkapcsolat-list/projektkapcsolat-list.component.html
+++ b/src/app/02 Eszkozok/01 Projekt/projektkapcsolat/projektkapcsolat-list/projektkapcsolat-list.component.html
@@ -19,6 +19,8 @@
     </button>
   </div>
 
+  <ng-template #compcont_projektkapcsolatuj></ng-template>
+
   <app-projektkapcsolat-tabla #tabla
                               [items]="Dto"
                               (forid)="onId($event)"
