--- a/src/app/02 Eszkozok/01 Projekt/ajanlat/ajanlat/ajanlat.html
+++ b/src/app/02 Eszkozok/01 Projekt/ajanlat/ajanlat/ajanlat.html
@@ -1,4 +1,4 @@
-<div class="alapkeret" [appSpinner]="eppFrissit">
+<div class="alapkeret szerkeszto" [appSpinner]="eppFrissit">
   <h5>Új ajánlat</h5>
 
   <div [formGroup]="formFej" autocomplete="off">
