--- a/src/app/02 Eszkozok/01 Projekt/projektkapcsolat/projektkapcsolat-vagolaprol/projektkapcsolat-vagolaprol.component.html
+++ b/src/app/02 Eszkozok/01 Projekt/projektkapcsolat/projektkapcsolat-vagolaprol/projektkapcsolat-vagolaprol.component.html
@@ -1,10 +1,10 @@
-<div class="alapkeret" [appSpinner]="eppFrissit">
+<div class="alapkeret szerkeszto" [appSpinner]="eppFrissit">
   <h5>Bizonylat vagy irat beillesztése vágólapról</h5>
   <div class="editform-row">
     <app-vagolap></app-vagolap>
   </div>
   <div class="editform-row-bottom">
-    <button class="toolbutton okbutton" type="button" (click)="ok()">Ok</button>
-    <button class="toolbutton" type="button" (click)="cancel()">Mégsem</button>
+    <button class="toolbutton okbutton" type="button" (click)="onSubmit()">Ok</button>
+    <button class="toolbutton" type="button" (click)="onCancel()">Mégsem</button>
   </div>
 </div>
