--- a/src/app/03 Bizonylatok/bizonylatkapcsolat/bizonylatkapcsolat-vagolaprol/bizonylatkapcsolat-vagolaprol.component.html
+++ b/src/app/03 Bizonylatok/bizonylatkapcsolat/bizonylatkapcsolat-vagolaprol/bizonylatkapcsolat-vagolaprol.component.html
@@ -4,7 +4,7 @@
     <app-vagolap></app-vagolap>
   </div>
   <div class="editform-row-bottom" style="margin-bottom: 10px">
-    <button class="toolbutton okbutton" type="button" (click)="ok()">Ok</button>
-    <button class="toolbutton" type="button" (click)="cancel()">Mégsem</button>
+    <button class="toolbutton okbutton" type="button" (click)="onSubmit()">Ok</button>
+    <button class="toolbutton" type="button" (click)="onCancel()">Mégsem</button>
   </div>
 </div>
